# living-docs

./: .living-docs.yaml  ENHANCEMENT_REPORT.md  README.md  pyproject.toml
.living-docs/: .gitignore  coverage_history.json
.living-docs/graph/: graph.json
docs/: __init__.md  cli.md  parser.md  staleness.md  sync.md  usage.md  watcher.md
living_docs/: __init__.py  ai.py  alerts.py  auto_pr.py  cicd.py  cli.py  coverage.py  dashboard.py  diff_analyzer.py  examples.py  explorer.py  freshness.py  graph.py  mapping.py  parser.py  semantic.py  staleness.py  sync.py  test_to_example.py  usage.py  watcher.py
